--- a/_base/users/static/users/styles/users.css
+++ b/_base/users/static/users/styles/users.css
@@ -74,7 +74,6 @@ li {
     row-gap: 1rem;
     justify-content: space-evenly;
     overflow-x: auto;
-    /* background-color: aliceblue; */
     padding: 1rem;
     width: 100%;
     min-width: 50rem;
@@ -83,7 +82,7 @@ li {
 .listings-card-container > * {
     box-shadow: var(--slimBoxShadow);
     padding: 1rem;
-    height: 10rem;
+    height: 100%;
     width: 10rem;
     display: grid;
     place-content: center;
@@ -167,6 +166,9 @@ li {
 
 
 /* mobile elements */
+.key-stats-container-mobile {
+    display: none;
+}
 
 .key-stats-container-mobile ul {
     display: grid;
@@ -189,6 +191,10 @@ li {
 
     .notifications h3 {
         justify-self: left;
+    }
+
+    .key-stats-container-mobile {
+        display: block;
     }
 }
 
