added logout btn to side nav in client account

--- a/_base/core/static/core/styles/base.css
+++ b/_base/core/static/core/styles/base.css
@@ -9,6 +9,7 @@
     --darkGray: #333;
     --crimson: crimson;
     --transparent: transparent;
+    --slateGray: darkslategrey;
 
     /* box shadows */
     --slimBoxShadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
