added nav card for mobile view to client account

--- a/_base/core/static/core/styles/base.css
+++ b/_base/core/static/core/styles/base.css
@@ -22,6 +22,7 @@
     --primaryNav: 2;
     --sideNav: 3;
     --navCard: 4;
+    --toggleNavCardBtn: 4;
 
     /* heights */
     --navHeight: 4rem;
