--- a/_base/templates/users/client.html
+++ b/_base/templates/users/client.html
@@ -2,13 +2,15 @@
 {% load static %}
 
 {% block page_stylesheets %}
-    <link rel="stylesheet" href="{% static 'users/styles/users.css' %}">
+    <link rel="stylesheet" href="{% static 'core/styles/elements/arrow-checkbox.css' %}?uuid=60">
+    <link rel="stylesheet" href="{% static 'users/styles/users.css' %}?uuid=700">
     <link rel="stylesheet" href="{% static 'users/styles/client.css' %}">
 {% endblock %}
 
 {% block main %}
 <div id="container">
-    <nav class="side-nav">
+
+    <nav class="side-nav" x-ref="sidenav" id="side-nav">
         <a href="{% url 'get_home' %}"><h3>UppeRoom</h3></a>
         <div class="side-nav-links-container">
             <a href="#"><i class="fa-solid fa-gauge"></i>Dashboard</a>
@@ -22,93 +24,108 @@
             <button class="logout-btn">logout</button>
         </form>
     </nav>
-</div>
 
-<main id="main">
-    {% comment %}
-    <h4>Subscribed Regions</h4>
-    {% for region in subscribed_regions %}
-        <ul>
-            <li>{{ region.name }}</li>
-        </ul>
-    {% endfor %}
-    {% endcomment %}
+    <main id="main">
+        <div class="middle-content">
+            <div>
+                <h3><i class="fa-solid fa-house-chimney-user"></i><span>Subscribed Listings</span></h3>
+                <div class="listings-card-container">
+                    <div>
+                        <i class="fa-solid fa-hourglass-start"></i>
+                        <b>Unverified</b>
+                        {% if unverified_listings %}
+                        {% for listing in unverified_listings %}
+                            <div>{{ listing.room_profile.room_type.get_name_display }} -
+                                <button
+                                hx-post="{% url 'handle_occupied_report' pk=listing.pk %}"
+                                hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
+                                >
+                                    Report Occupied
+                                </button>
+                            </div>
+                        {% endfor %}
+                        {% else %}
+                            <div>0</div>
+                        {% endif %}
+                    </div>
 
+                    <div>
+                        <i class="fa-solid fa-circle-exclamation"></i>
+                        <b>Probation</b>
+                        {% if probation_listings %}
+                        {% for listing in probation_listings %}
+                            <div>{{ listing.room_profile.room_type.get_name_display }}</div>
+                        {% endfor %}
+                        {% else %}
+                            <div>0</div>
+                        {% endif %}
+                    </div>
 
-    <div class="middle-content">
-        <div>
-            <h3><i class="fa-solid fa-house-chimney-user"></i><span>Subscribed Listings</span></h3>
-            <div class="listings-card-container">
-                <div>
-                    <i class="fa-solid fa-hourglass-start"></i>
-                    <b>Unverified</b>
-                    {% if unverified_listings %}
-                    {% for listing in unverified_listings %}
-                        <div>{{ listing.room_profile.room_type.get_name_display }} -
-                            <button
-                            hx-post="{% url 'handle_occupied_report' pk=listing.pk %}"
-                            hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
-                            >
-                                Report Occupied
-                            </button>
-                        </div>
-                    {% endfor %}
-                    {% else %}
+                    <div>
+                        <i class="fa-solid fa-ban"></i>
+                        <b>Rejected</b>
+                        {% if rejected_listings %}
+                        {% for listing in rejected_listings %}
+                            <div>{{ listing.room_profile.room_type.get_name_display }}</div>
+                        {% endfor %}
+                        {% else %}
+                            <div>0</div>
+                        {% endif %}
+                    </div>
+
+                    <div>
+                        <i class="fa-solid fa-certificate"></i>
+                        <b>Verified</b>
+                        {% if verified_listings %}
+                        {% for listing in verified_listings %}
+                            <div>{{ listing.room_profile.room_type.get_name_display }}</div>
+                        {% endfor %}
+                        {% else %}
                         <div>0</div>
-                    {% endif %}
-                </div>
+                        {% endif %}
+                    </div>
 
-                <div>
-                    <i class="fa-solid fa-circle-exclamation"></i>
-                    <b>Probation</b>
-                    {% if probation_listings %}
-                    {% for listing in probation_listings %}
-                        <div>{{ listing.room_profile.room_type.get_name_display }}</div>
-                    {% endfor %}
-                    {% else %}
-                        <div>0</div>
-                    {% endif %}
+                    <div>
+                        <i class="fa-solid fa-flag-checkered"></i>
+                        <b>Settled</b>
+                        {% if settled_listings %}
+                        {% for listing in settled_listings %}
+                            <div>{{ listing.room_profile.room_type.get_name_display }}</div>
+                        {% endfor %}
+                        {% else %}
+                            <div>0</div>
+                        {% endif %}
+                    </div>
                 </div>
+            </div>
 
-                <div>
-                    <i class="fa-solid fa-ban"></i>
-                    <b>Rejected</b>
-                    {% if rejected_listings %}
-                    {% for listing in rejected_listings %}
-                        <div>{{ listing.room_profile.room_type.get_name_display }}</div>
-                    {% endfor %}
-                    {% else %}
-                        <div>0</div>
-                    {% endif %}
-                </div>
+            <div class="key-stats-container-mobile">
+                <h3>
+                    <i class="fa-solid fa-chart-simple"></i>
+                    <span>Key Stats</span>
+                </h3>
 
-                <div>
-                    <i class="fa-solid fa-certificate"></i>
-                    <b>Verified</b>
-                    {% if verified_listings %}
-                    {% for listing in verified_listings %}
-                        <div>{{ listing.room_profile.room_type.get_name_display }}</div>
-                    {% endfor %}
-                    {% else %}
-                    <div>0</div>
-                    {% endif %}
-                </div>
+                <ul>
+                    <li><i class="fa-solid fa-check-double"></i>Active Subscriptions: {% if active_subscriptions %}{{active_subscriptions.count}}{% else %}0{% endif %}</li>
+                    <li><i class="fa-solid fa-check-double"></i>Complete Transactions: {% if complete_transactions %}{{complete_transactions.count}}{% else %}0{% endif %}</li>
+                    <li><i class="fa-solid fa-ban"></i>Aborted Transactions: {% if incomplete_transactions %}{{incomplete_transactions.count}}{% else %}0{% endif %}</li>
+                    <!-- <li><i class="fa-solid fa-naira-sign"></i> Total Paid: {% if total_paid %}{{total_paid}}{% else %}0{% endif %}</li> -->
+                </ul>
+            </div>
 
-                <div>
-                    <i class="fa-solid fa-flag-checkered"></i>
-                    <b>Settled</b>
-                    {% if settled_listings %}
-                    {% for listing in settled_listings %}
-                        <div>{{ listing.room_profile.room_type.get_name_display }}</div>
-                    {% endfor %}
+            <div class="notifications">
+                <h3><i class="fa-solid fa-bell"></i>Notifications</h3>
+                <div class="notifications-card">
+                    {% if notifications %}
+                        {{notifications}}
                     {% else %}
-                        <div>0</div>
+                        <span>&#8594; No notifications for now</span>
                     {% endif %}
                 </div>
             </div>
         </div>
 
-        <div class="key-stats-container-mobile">
+        <div class="key-stats-container">
             <h3>
                 <i class="fa-solid fa-chart-simple"></i>
                 <span>Key Stats</span>
@@ -120,34 +137,29 @@
                 <li><i class="fa-solid fa-ban"></i>Aborted Transactions: {% if incomplete_transactions %}{{incomplete_transactions.count}}{% else %}0{% endif %}</li>
                 <!-- <li><i class="fa-solid fa-naira-sign"></i> Total Paid: {% if total_paid %}{{total_paid}}{% else %}0{% endif %}</li> -->
             </ul>
+
         </div>
 
-        <div class="notifications">
-            <h3><i class="fa-solid fa-bell"></i>Notifications</h3>
-            <div class="notifications-card">
-                {% if notifications %}
-                    {{notifications}}
-                {% else %}
-                    <span>&#8594; No notifications for now</span>
-                {% endif %}
-            </div>
-        </div>
-    </div>
+    </main>
 
-    <div class="key-stats-container">
-        <h3>
-            <i class="fa-solid fa-chart-simple"></i>
-            <span>Key Stats</span>
-        </h3>
+    <label class="buttons__burger">
+        <input type="checkbox" id="burger" onchange="toggleNav()">
+        <span></span>
+        <span></span>
+        <span></span>
+    </label>
 
-        <ul>
-            <li><i class="fa-solid fa-check-double"></i>Active Subscriptions: {% if active_subscriptions %}{{active_subscriptions.count}}{% else %}0{% endif %}</li>
-            <li><i class="fa-solid fa-check-double"></i>Complete Transactions: {% if complete_transactions %}{{complete_transactions.count}}{% else %}0{% endif %}</li>
-            <li><i class="fa-solid fa-ban"></i>Aborted Transactions: {% if incomplete_transactions %}{{incomplete_transactions.count}}{% else %}0{% endif %}</li>
-            <!-- <li><i class="fa-solid fa-naira-sign"></i> Total Paid: {% if total_paid %}{{total_paid}}{% else %}0{% endif %}</li> -->
-        </ul>
+    <script>
+        function toggleNav() {
+          const checkbox = document.getElementById('burger');
+          const sidenav = document.getElementById('side-nav');
 
-    </div>
-
-</main>
+          if (checkbox.checked) {
+            sidenav.style.display = 'flex';
+          } else {
+            sidenav.style.display = 'none';
+          }
+        }
+    </script>
+</div>
 {% endblock %}
