working on subscription page for client account

--- a/_base/templates/users/client.html
+++ b/_base/templates/users/client.html
@@ -15,7 +15,7 @@
         <div class="side-nav-links-container">
             <a href="#"><i class="fa-solid fa-gauge"></i>Dashboard</a>
             <!-- <a href="#">Listings</a> -->
-            <a href="#"><i class="fa-solid fa-list-check"></i>Subscriptions</a>
+            <a href="{% url 'get_client_subscriptions' %}"><i class="fa-solid fa-list-check"></i>Subscriptions</a>
             <a href="#"><i class="fa-solid fa-credit-card"></i>Payments</a>
         </div>
 
