--- a/_base/users/static/users/styles/users.css
+++ b/_base/users/static/users/styles/users.css
@@ -64,11 +64,6 @@ li {
 
 
 /* ######### */
-.middle-content > :first-child {
-    width: 100%;
-    overflow-x: auto;
-}
-
 .listings-card-container {
     display: flex;
     column-gap: 2rem;
@@ -127,23 +122,14 @@ li {
     align-items: center;
 }
 
+
+/* ## Middle Content */
 .middle-content {
-    padding-top: 2rem;
     background-color: var(--backgroundGray);
     width: 100%;
-    display: grid;
-    align-content: flex-start;
-    row-gap: 4rem;
 }
 
-.middle-content h3 {
-    margin-left: 1rem;
-    margin-bottom: 1rem;
-    display: flex;
-    align-items: center;
-    column-gap: .5rem;
-}
-
+/* ## */
 
 .notifications {
     display: grid;
@@ -158,10 +144,7 @@ li {
     padding: 1rem 2rem;
 }
 
-.middle-content > :first-child > h3 {
-    position: sticky;
-    left: 1rem;
-}
+
 
 #logout-form {
     margin-top: auto;
