added basic design for displaying subscribed listings for client and handling occupied report

--- a/_base/core/static/core/styles/base.css
+++ b/_base/core/static/core/styles/base.css
@@ -28,7 +28,8 @@
     --navHeight: 4rem;
 
     /* border radius */
-    --smallBorderRadius: .6rem
+    --smallBorderRadius: .6rem;
+    --circularBorderRadius: 50%
 }
 
 * {
