--- a/_base/templates/base.html
+++ b/_base/templates/base.html
@@ -5,7 +5,7 @@
 <html lang="en">
 <head>
     <!-- common stylesheets -->
-    <link rel="stylesheet" hx-preserve="true" href="{% static 'core/styles/base.css' %}">
+    <link rel="stylesheet" hx-preserve="true" href="{% static 'core/styles/base.css' %}?uuid={{uuid}}">
     <link rel="stylesheet" hx-preserve="true" href="{% static 'core/styles/nav.css' %}">
 
     <!-- common elements -->
