--- a/_base/templates/payments/withdraw.html
+++ b/_base/templates/payments/withdraw.html
@@ -6,7 +6,7 @@
     <title>Withdraw Payment</title>
 </head>
 <body>
-    <h1>Enter the anount you want to Withdraw</h1>
+    <h1>Enter the amount you want to Withdraw</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
