added error feedbacks and redirects on auth pages

--- a/_base/templates/auths/verify-email.html
+++ b/_base/templates/auths/verify-email.html
@@ -27,11 +27,11 @@
         <fieldset>
             <p>Select Your Role</p>
             <label>
-                <input type="radio" name="role" value="CREATOR">
+                <input type="radio" name="role" value="CREATOR" required>
                 Creator
             </label><br>
             <label>
-                <input type="radio" name="role" value="CLIENT">
+                <input type="radio" name="role" value="CLIENT" required>
                 Client
             </label>
         </fieldset>
