--- a/_base/templates/listings/lodge-profile.html
+++ b/_base/templates/listings/lodge-profile.html
@@ -1,28 +1,36 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block page_stylesheets %}
+<link rel="stylesheet" href="{% static 'listings/styles/lodge-profile.css' %}">
+{% endblock %}
 
 {% block main %}
-<a href="{% url 'get_creator' %}">Profile</a>
+<main id="main">
+    <div>
+        <h2 style="margin: 0;">Lodge Profile</h2>
+        <h3>{{lodge.name}}</h3>
+    </div>
 
-<h2 style="margin: 0;">Lodge Profile</h2>
+    <div class="room-profile-container">
+        {% for room_type, form in rooms_dict.items %}
+        <div>
+            <b>{{ room_type }}</b>
+            <form method="post" action="{% url 'update_room_profile' pk=form.instance.pk %}">
+                {% csrf_token %}
+                {{form}}
+                <button>update</button>
+            </form>
+        </div>
+        {% endfor %}
+    </div>
 
-<p>{{lodge.name}}</p>
+    {% comment %}
+    <h4 style="margin: 0">Unavailable Room Types</h4>
+    {% for room_type in unavailable_room_types %}
+    <div>{{room_type.get_name_display}}</div>
+    {% endfor %}
+    {% endcomment %}
+</main>
 
-{% for room_type, form in rooms_dict.items %}
-    {{ room_type }}
-    <form method="post" action="{% url 'update_room_profile' pk=form.instance.pk %}">
-        {% csrf_token %}
-        {{form}}
-        <button>update</button>
-    </form>
-{% endfor %}
-
-<h4 style="margin: 0">Unavailable Room Types</h4>
-{% for room_type in unavailable_room_types %}
-<div>{{room_type.get_name_display}}</div>
-{% endfor %}
-
-<form action="{% url 'logout' %}" method="post">
-    {% csrf_token %}
-    <button>logout</button>
-</form>
 {% endblock %}
