--- a/_base/users/static/users/styles/users.css
+++ b/_base/users/static/users/styles/users.css
@@ -176,12 +176,21 @@ li {
 }
 /* end mobile elements */
 
-.buttons__burger {
+
+.users-menu-btn {
     position: fixed;
     bottom: 2rem;
-    left: 50vw;
+    right: 1rem;
     display: none;
     z-index: var(--toggleNavCardBtn);
+
+    background-color: var(--slateGray);
+    padding: .5rem;
+    border-radius: var(--circularBorderRadius);
+    box-shadow: var(--mediumBoxShadow);
+    background: #e0e0e0;
+    box-shadow:  7px 7px 13px #bebebe,
+             -7px -7px 13px var(--primaryWhite);
 }
 
 
@@ -210,7 +219,7 @@ li {
         margin-left: 0;
     }
 
-    .buttons__burger {
+    .users-menu-btn {
         display: block;
     }
 }
