added earnings section to creator dashboard

--- a/_base/templates/users/creator/listings.html
+++ b/_base/templates/users/creator/listings.html
@@ -8,7 +8,7 @@
 {% block middle_content %}
 <div class="middle-content">
     <div class="listings-container">
-        <h3>My Listings</h3>
+        <h3>My Lodges</h3>
 
         <!-- <a href="{% url 'register_lodge' %}">Register hostel</a> -->
 
