--- a/_base/listings/static/listings/styles/lodge-profile.css
+++ b/_base/listings/static/listings/styles/lodge-profile.css
@@ -17,7 +17,7 @@ h1, h2, h3 {
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     column-gap: 2rem;
     row-gap: 3rem;
-
+    justify-items: center;
 }
 
 .room-profile-container > * {
