added threshold in subscription handler to track subscriptions

--- a/_base/templates/users/creator/listings.html
+++ b/_base/templates/users/creator/listings.html
@@ -15,7 +15,7 @@
         {% if user.lodges.all %}
         <ul>
             {% for lodge in user.lodges.all %}
-            <li><a href="{% url 'get_lodge_profile' pk=lodge.pk %}">{{lodge.name}}</a></li>
+            <li><a href="{% url 'get_lodge_profile' pk=lodge.pk %}">{{lodge.name}} - {{lodge.region}}</a></li>
             {% endfor %}
         </ul>
         {% else %}
