--- a/_base/templates/users/client/subscriptions.html
+++ b/_base/templates/users/client/subscriptions.html
@@ -9,7 +9,9 @@
 
 {% block middle_content %}
     <h1>My Subscriptions</h1>
+    <h3>Active Subscriptions</h3>
     <div class="subscriptions-container">
+
         {% for subscription in active_subscriptions %}
         <ul>
             <li><b>Date Created:</b> {{ subscription.created_at}}</li>
@@ -27,6 +29,30 @@
         </ul>
         {% endfor %}
 
+    </div>
+
+    <h3>Expired Subscriptions</h3>
+    <div class="subscriptions-container">
+        {% if not expired_subscriptions %}
+            <b>None</b>
+        {% else %}
+        {% for subscription in expired_subscriptions %}
+        <ul>
+            <li><b>Date Created:</b> {{ subscription.created_at}}</li>
+            <li><b>Amount:</b> {{subscription.transaction.amount}}</li>
+            <li><b>Regions:</b>
+                {% for region in subscription.transaction.regions.all %}
+                    {{region}},&nbsp;
+                {% endfor %}
+            </li>
+            <li><b>Unverified Listings</b>: {{subscription.subscribed_listings|filter_by_status:"UNVERIFIED"}}</li>
+            <li><b>Verified Listings</b>: {{subscription.subscribed_listings|filter_by_status:"VERIFIED"}}</li>
+            <li><b>Probation Listings</b>: {{subscription.subscribed_listings|filter_by_status:"PROBATION"}}</li>
+            <li><b>Rejected Listings</b>: {{subscription.subscribed_listings|filter_by_status:"REJECTED"}}</li>
+            <!-- <a href="{% url 'get_subscribed_listings' pk=subscription.pk %}">View All Listings</a> -->
+        </ul>
+        {% endfor %}
+        {% endif %}
     </div>
 
 {% endblock %}
