--- a/_base/subscriptions/static/subscriptions/styles/subscribed-listings.css
+++ b/_base/subscriptions/static/subscriptions/styles/subscribed-listings.css
@@ -14,6 +14,7 @@ h1 {
     column-gap: 2rem;
     row-gap: 2rem;
     justify-content: center;
+    /* justify-items: center; */
     /* background-color: aliceblue; */
 }
 
