--- a/_base/templates/payments/order-summary.html
+++ b/_base/templates/payments/order-summary.html
@@ -11,11 +11,13 @@
 id="payment-form"
 hx-post="{% url 'initialize_transaction' %}"
 hx-trigger="click"
-hx-target="#global-response-modal"
+hx-target="#global-response-message-htmx"
 hx-swap="outerHTML"
 >
     {% csrf_token %}
     <h1>Order Summary</h1>
+
+    <input type="hidden" name="school" value="{{school_pk}}">
 
     <ul class="regions-list">
     {% for region in regions %}
